[gd_scene load_steps=2 format=3 uid="uid://qga2y5wh6ftv"]

[ext_resource type="Script" path="res://scripts/drag_component.gd" id="1_r6xsd"]

[node name="drag_component" type="Area2D"]
script = ExtResource("1_r6xsd")

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
